# parakeyt-firmware

./: .gitignore  CMakeLists.txt  README.md  README.org  build.sh  flake.nix
config/: README.org  config.h  generate.py  reference_config.h  sdvx_config.h  tkl_config.h
include/: tusb_config.h  util.h
include/io/: MCP23008.h  TLA2528.h  TLC59208.h  io.h
src/: main.c  usb_descriptors.c  util.c
src/io/: MCP23008.c  TLA2528.c  TLC59208.c  io.c  mcp23008.c
testing/: CMakeLists.txt  bus_scan.c  printer.c  projected_polling.py
